# Osiris-bot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs  scrape.rs
