[package]
name = "Osirisbot"
version = "0.1.1"
authors = ["Osiris9999 <rishikeshmahi@gmail.com>"]
edition = "2018"
description = "A personal bot made by Osiris"
readme = "README.md"
repository = "https://github.com/Osiris9999/Osiris-bot"
license = "MIT"
keywords = ["telegram", "bot"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["auto-send", "macros"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
scraper = "0.13.0"
reqwest = "0.11.11"
select = "0.5.0"
error-chain = "0.12.4"
tokio = { version = "1.20.4", features = ["full"] }
urlshortener = "3.0.0"
